﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$


2006-07-09 Michal Čihař  <michal@cihar.com>
    * Documentation.html: Readd accidentally removed quotes.

2006-07-09 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_printview.php: bug #1398748, print view and TIMESTAMP NULL

2006-07-09 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/select_server.lib.php, main.php, libraries/left_header.inc.php:
      move server selection in main to the 'right' (below 'phpMyAdmin')

2006-07-08 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * left.php, libraries/header_meta_style.inc.php, libraries/header.inc.php:
      fix to remove scrollbar bug in IE without quirks mode

2006-07-07 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_qbe.php: deactivated some work in progress

2006-07-06 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php, libraries/db_details_common.inc.php
      libraries/db_details_db_info.inc.php:
      bug #1518147, after displaying information_schema, displaying other
      dbs does not show size
    * libraries/auth/config.auth.lib.php: bug #1477402, if default server fails
      you cannot switch in config auth

2006-07-06 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/select_server.lib.php, css/phpmyadmin.css.php:
      make serverlist a real html-list
    * main.php: move server selection above server
      details (more logical)

2006-07-04 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php, tbl_properties_operations.php,
      libraries/Table.class.php, libraries/export/sql.php,
      tbl_move_copy.php:
      a single-table copy did not copy the constraints;
      also bug #1388048, constraints copied too early when copying a db

2006-07-04 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * js\querywindow.js, libraries\footer.inc.php: renamed JavaScript function
      refreshLeft() to refreshNavigation()